prepair my 9 block for review

--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,8 @@
 @import url(investors-carousel.css);
 @import url(question-with-statistics.css);
 @import url(statistic-blocks.css);
+@import url(statistic-blocks.css);
 @import url(investors-feedback.css);
 @import url(news.css);
 @import url(experienced-team-job.css);
-@import url(section-feedback-from-investors.css);
 @import url(footer.css);
