--- a/css/news.css
+++ b/css/news.css
@@ -2,57 +2,96 @@
     background-image: linear-gradient(0deg, rgb(26, 28, 40) 0%, rgb(33, 40, 61) 100%);
     background-size: cover;
     display: flex;
-    flex-direction: column;
-    align-content: center;
-    min-width: 320px;
-    padding-top: 55px;
-    padding-bottom: 60px;
-    font-size: 20px;
+    flex-direction: row;
+    gap: 10px;
+    padding-top: 10px;
+    padding-right: 40px;
+    padding-left: 30px;
+    margin-top: 0;
 }
 
 .wrapper-news {
     display: flex;
+    flex-direction: column;
     padding-right: 40px;
     padding-left: 40px;
-    justify-content: left;
+    justify-content: center;
+    align-items: flex-start;
+
 }
 
 .container__title-news {
     color: var(--color-title);
+    margin-bottom: 15px;
+
 }
 
 .container__divider-news {
-    background: var(--color-subtitle);
-    height: 3px;
+    background: var(--color-elements);
+    height: 2px;
     border: 0;
-    width: 20%;
+    width: 10%;
+    margin-bottom: 15px;
+
 }
 
 .container__text-article-news {
     color: var(--color-title);
     font-size: 17px;
+    padding-top: 30px;
+    align-items: baseline;
+
 }
+
 
 .article__datetime-news {
     color: var(--color-datetime-news);
     font-size: 13px;
+    font-weight: bolder;
+    align-items: baseline;
 }
 
 .wrapper-news-images {
     width: 70px;
     border-radius: 50%;
+    padding-top: 30px;
+    float: left;
+    margin-right: 10px;
 }
 
-.container__article-news{
+.container__article-news {
+    display: flex;
     list-style-type: none;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 @media (min-width: 768px) {
-    .wrapper__news {
+    .container__title-news .container__article-news {
         display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: baseline;
         padding-right: 40px;
-        padding-left: 40px;
-        justify-content: center;
+        padding-left: 60px;
+
     }
 
+    .wrapper__news {
+        display: flex;
+        flex-direction: row;
+        max-width: 1200px;
+        padding-right: 40px;
+        padding-left: 30px;
+    }
+
+    .news {
+        padding-top: 55px;
+        padding-bottom: 60px;
+        margin: 0 auto;
+        justify-content: center;
+
+
+
+    }
 }
