--- a/css/statistic-blocks.css
+++ b/css/statistic-blocks.css
@@ -2,15 +2,17 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding-top: 10px;
     padding-right: 40px;
-    padding-left: 40px;
-    margin-top: 50px;
-    min-height: 634.8px;
+    padding-left: 60px;
+    margin-top: 0;
 }
 
 .text__title-statistics {
     color: var(--color-elements);
-    font-size: 30px;
+    font-size: 44px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 15px;
 }
 
 .text__subtitle-statistics {
@@ -22,21 +24,43 @@
 
 hr {
     background: #ffffff1c;
-    height: 3px;
+    height: 2px;
     border: 0;
-    width: 20%;
+    width: 15%;
+    margin-bottom: 15px;
 }
 
 @media (min-width: 768px) {
     .wrapper__statistics-block {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         gap: 10px;
         word-break: normal;
         align-items: center;
         padding-right: 40px;
-        padding-left: 40px;
-        margin-top: 50px;
-        justify-content: center;
+        padding-left: 60px;
+        margin-top: 0;
+        justify-content:space-around;
+    }
+}
+
+@media (min-width: 768px) {
+    .text__title-statistics {
+        font-size: 58px;
+    }
+
+}
+
+@media (min-width: 1040px) {
+    .wrapper__statistics-block {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 10px;
+        padding-right: 40px;
+        padding-left: 60px;
+        margin-top: 0;
+        justify-content: space-around;
     }
 }
