--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,5 @@
 .footer__footer_wrapper {
+        position: relative;
         background-color: var(--color-background);
         width: 100%;
         padding: 60px 100px;
@@ -14,9 +15,12 @@
 
 @media (min-width: 960px) {
     .footer__footer_wrapper {
+        position: relative;
         background-color: var(--color-background);
         width: 100%;
-        padding: 60px 45px;
+        height: 500px;
+        margin-top: 5%;
+        padding: 60px 0px;
     }
 }
 
@@ -29,25 +33,33 @@
 } */
 @media (min-width: 960px) {
     .footer__company-info {
-        float: left;
+        position: absolute;
         max-width: 25%;
-        margin: 0% 15% 5% 0%;
+        top: 0%;
+        left: 5%;
+        bottom: 5%;
+        margin-top: 60px;
     }
 }
 
 @media (min-width: 960px) {
     .footer__useful-links {
-        float: left;
+        position: absolute;
         max-width: 25%;
-        margin: 0% 15% 5% 0%;
+        top: 0%;
+        left: calc(50% - 61px);
+        bottom: 5%;
+        margin: 0px;
     }
 }
 
 @media (min-width: 960px) {
     .footer__follow-us-info {
-        float: left;
+        position: absolute;
         max-width: 25%;
-        margin: 0% 15% 5% 0%; 
+        top: 0%;
+        right: 5%;
+        bottom: 5%;
     }
 }
 
@@ -80,7 +92,7 @@
     text-decoration: none;
 }
 
-.footer__usefull-links {
+.footer__useful-links {
     margin: 60px 0px 15px 0px;
 }
 
@@ -157,20 +169,21 @@
 }
 
 .footer__line {
-    margin: auto;
-    width: 100%;
-}
-
-.footer__line {
+    position: absolute;
+    width: 90%;
     height: 1px;
     color: rgb(26, 28, 40);
+    bottom: 60px;
+    left: 5%;
 }
 
 .footer__copyright {
+    position: absolute;
     text-align: center;
     font-family: "Fira Sans", sans-serif;
     font-size: 12px;
     font-weight: 700;
     color: var(--color-text);
-    margin: 15px;
+    bottom: 15px;
+    width: 100%;
 }
