--- a/css/footer.css
+++ b/css/footer.css
@@ -77,7 +77,7 @@
 
 @media (min-width: 960px) {
     #clock {
-        font-family: "Ubuntu", sans-serif;
+        font-family: "Fira Sans", sans-serif;
         position: absolute;
         color: white;
         bottom: 30px;
@@ -211,7 +211,7 @@
 }
 
 #clock {
-    font-family: "Ubuntu", sans-serif;
+    font-family: "Fira Sans", sans-serif;
     text-align: center;
     color: white;
     margin-top: 5px;
