--- a/css/token.css
+++ b/css/token.css
@@ -134,11 +134,11 @@
 }
 .ico-stat-green {
     font-size: 20px;
-    color: #58e75d;
+    color: #58e754;
     font-weight: 500;
 }
 .ico-stat-value {
-    color: #ffb811;
+    color: #e69d19;
     font-size: 20px;
     font-weight: 500;
 }
@@ -151,7 +151,7 @@
  
 }
 .join-crypto_a {
-    background-image: linear-gradient(to right, rgb(0, 162, 255) , rgb(0, 255, 183));
+    background-image: linear-gradient(to right, #336cbf, #17c69d);
     width: 1170px;
     height: 189px;
 }
@@ -186,9 +186,4 @@
     align-items: center;
     margin-left: 5px;
     text-decoration: none;
-}
-@media (min-width: 990px) {
-    .crp-token {
-        font-size: 20px;
-    }
 }
