--- a/css/token.css
+++ b/css/token.css
@@ -65,7 +65,7 @@
     min-width: 272px;
     padding: 0px 15px;
     background-color: #252338;
-    max-height: 378px;
+    height: 378px;
 }
 .ico-end {
     margin: 50px 0px 0px 16px;
@@ -146,7 +146,7 @@
     display: flex;
     flex-direction: row;
    margin: 0px 70px 0px 80px;
-   padding: 0px 35px 0px 35px;
+   padding: 60px 35px 60px 35px;
    justify-content: center;
  
 }
