--- a/css/token.css
+++ b/css/token.css
@@ -4,8 +4,8 @@
     flex-direction: row;
     padding: 60px 40px;
     justify-content: center;
+    background-color: #1a1c28;
 }
-
 .crp-token {
     max-width: 570px;
     min-width: 272px;
@@ -27,6 +27,7 @@
     font-family: 'Ubuntu', sans-serif;
     font-size: 48px;
     color: #fff;
+    margin: 48px 0px;
 }
 .crp-token__info {
     font-family: 'Fira Sans', sans-serif;
@@ -45,7 +46,6 @@
     align-items: center;
 }
 .check {
-    background-color: #1c0c0c;
     border-radius: 100%;
     margin: 0px 6px;
     height: 24px;
@@ -64,7 +64,7 @@
     max-width: 570px;
     min-width: 272px;
     padding: 0px 15px;
-    background-color: #252338;
+    background-color: #21232f;
     height: 378px;
 }
 .ico-end {
@@ -82,7 +82,10 @@
     justify-content: space-evenly;
 }
 .timer-item {
-    margin: 20px    ;
+    margin: 20px 16px;
+    width: 142px;
+    padding: 45px 40px 0px 40px;
+    text-align: center;
 }
 .timer-number {
     font-family: 'Ubuntu', sans-serif;
@@ -93,14 +96,14 @@
 .timer-caption {
     font-family: 'Fira Sans', sans-serif;
     font-size: 18px;
-    color: #ffffff9e;
+    color: #7e7f86;
     font-weight: 300;
 }
 .verticalline {
     margin: 50px 0px 0px 0px;
     height: 100px;
     width: 1px;
-    background-color: #ffffff9e;
+    background-color: #30323d;
 }
 .ico-stats {
     font-family: 'Fira Sans', sans-serif;
@@ -129,7 +132,7 @@
 }
 .greyline {
     width: 20px;
-    background-color: #ffffff;
+    background-color: #51525c;
     height: 1px;
 }
 .ico-stat-green {
@@ -143,11 +146,10 @@
     font-weight: 500;
 }
 .join-crypto {
+    padding: 60px 0px 70px;
     display: flex;
-    flex-direction: row;
-   margin: 0px 70px 0px 80px;
-   padding: 60px 35px 60px 35px;
    justify-content: center;
+   background-color: #1a1c28;
  
 }
 .join-crypto_a {
@@ -168,7 +170,7 @@
 }
 .join-community_subtitle {
     display: flex;
-    padding: 15px 0px 0px 50px;
+    padding: 30px 0px 0px 50px;
     font-family: 'Fira Sans', sans-serif;
     font-size: 17px;
     font-weight: 300;
